--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  firebase_core: ^4.0.0
+  cloud_firestore:
+  firebase_core: 
   flutter:
     sdk: flutter
-  cloud_firestore: ^6.0.0
+   
 
 
   # The following adds the Cupertino Icons font to your application.
